log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hash-app
  name: hash-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash-app
  strategy: {}
  template:
    metadata:
      labels:
        app: hash-app
    spec:
      containers:
      - image: bun-hash
        name: bun-hash
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
status: {}
