log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hash-app-svc
spec:
  type: ClusterIP
  selector:
    app: hash-app
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 3003
